--- a/HTML/Drilldow/DrillDown.html
+++ b/HTML/Drilldow/DrillDown.html
@@ -1,3 +1,7 @@
+CSS_Drilldown = 
+
+
+ "
 <div class='card-container'>
     <div class='accordion'>
         <link rel='stylesheet' href='https://fonts.googleapis.com/icon?family=Material+Icons:FILL'>
@@ -13,7 +17,7 @@
             <input type='checkbox' id='accordion-2' name='accordion'>
             "&[HTM_CSS_Distri_industrial]&"
         </div>
-        <div class='accordion-item'>
+         <div class='accordion-item'>
             <input type='checkbox' id='accordion-3' name='accordion'>
             "&[HTM_CSS_Empregos_estab]&"
         </div>
@@ -22,10 +26,41 @@
             "&[HTM_CSS_IFC]&"
         </div>
         <div class='accordion-item'>
+            <input type='checkbox' id='accordion-5' name='accordion'>
+            "&[HTM_CSS_Panorama_Economico]&"
+        </div>
+         <div class='accordion-item'>
+            <input type='checkbox' id='accordion-6' name='accordion'>
+            "&[HTM_CSS_Perfil_Municipio]&"
+        </div>
+            <div class='accordion-item'>
+            <input type='checkbox' id='accordion-7' name='accordion'>
+            "&[HTM_CSS_Pn_Gestao]&"
+        </div>
+         </div>
+            <div class='accordion-item'>
+            <input type='checkbox' id='accordion-8' name='accordion'>
+            "&[HTM_CSS_Pn_Educacao]&"
+        </div>
+         </div>
+            <div class='accordion-item'>
             <input type='checkbox' id='accordion-9' name='accordion'>
+            "&[HTM_CSS_Pn_Mineracao]&"
+        </div>
+        </div>
+            <div class='accordion-item'>
+            <input type='checkbox' id='accordion-10' name='accordion'>
+            "&[HTM_CSS_Saude]&"
+        </div>
+        <div class='accordion-item'>
+            <input type='checkbox' id='accordion-11' name='accordion'>
             "&[HTM_CSS_P_Sindicatos]&"
         </div>
-
+        <div class='accordion-item'>
+            <input type='checkbox' id='accordion-12' name='accordion'>
+            "&[HTM_CSS_Saldo_Empregos]&"
+        </div>
+        
     </div>
 </div>
 
@@ -75,7 +110,7 @@
         color: #23325f;
         border: 1px solid rgba(100, 100, 100, .2);
         font-weight: bold;
-        font-size: 1.2rem;
+        font-size: 1.5rem;
         text-align: center;
         padding: .5rem .7rem;
         margin: .1rem;
@@ -158,7 +193,7 @@
     }
 
     .kpi-cards.special-card a.kpi-link strong {
-        font-size: .9rem;
+        font-size: 1.2rem;
     }
 
     .card-content-inline {
@@ -207,7 +242,7 @@
 
     .fonte {
         font-weight: bold;
-        font-size: 1rem;
+        font-size: 1.2rem;
     }
 
     .fonte-details {
@@ -220,7 +255,7 @@
 
     .fonte-details p {
         margin: 0;
-        font-size: .9rem;
+        font-size: 1.2rem;
     }
 
     .card-header {
@@ -235,7 +270,7 @@
     }
 
     input[type='checkbox']:checked~.accordion-content {
-        height: auto;
+        height:auto;
         overflow-y: auto;
         max-height: calc(100vh - 120px);
     }
@@ -256,3 +291,5 @@
         border-radius: 5px;
     }
 </style>
+
+"
